tests/errors/header/name_double_define 2.s

.name "Kroz"
.comment "Hello, i'm Kroz"
.name "Kroz"
		
live %1
